<resources>
    <string name="commerce_create_room">Create</string>
    <string name="commerce_create_tips1">Welcome to E-commerce!</string>
    <string name="commerce_living">LIVE</string>
    <string name="commerce_room_id">%s</string>
    <string name="commerce_user_count">%d</string>
    <string name="commerce_app_name">E-Commerce</string>
    <string name="commerce_live_top_close">Close</string>
    <string name="commerce_live_bottom_chat">Say something...</string>
    <string name="commerce_live_perms_leak_tip" >Missing permissions required for live streaming. Would you like to reapply?</string>
    <string name="commerce_live_yes">Yes</string>
    <string name="commerce_live_no">No</string>
    <string name="commerce_text_input_sent">Send</string>
    <string name="commerce_text_input_hint">Please input...</string>
    <string name="commerce_text_input_empty">Empty input</string>
    <string name="commerce_setting_switch_camera">Flip</string>
    <string name="commerce_setting_video_on">Camera On</string>
    <string name="commerce_setting_video_off">Camera Off</string>
    <string name="commerce_setting_mic_on">Mic On</string>
    <string name="commerce_setting_mic_off">Mic Off</string>
    <string name="commerce_setting_statistic">Stats</string>
    <string name="commerce_setting_quality">Video Quality</string>
    <string name="commerce_setting_advance_setting">Advanced Settings</string>
    <string name="commerce_setting_quality_enhance_tip">Due to your device being a low-end model, the super-resolution feature has been disabled to ensure smooth device performance.</string>
    <string name="commerce_setting_quality_enhance_tip2">Due to your device model or resolution settings, the super-resolution feature has been temporarily disabled to ensure smooth performance.</string>
    <string name="commerce_picture_quality_title">Resolution</string>
    <string name="commerce_picture_quality_1080p">1080P\nFHD</string>
    <string name="commerce_picture_quality_720p">720P\nHD</string>
    <string name="commerce_picture_quality_540p">540P\n</string>
    <string name="commerce_picture_quality_360p">360P\nSD</string>
    <string name="commerce_picture_quality_270p">270P\n</string>
    <string name="commerce_picture_quality_180p">180P\n</string>
    <string name="commerce_beauty_group_beauty">Beautification</string>
    <string name="commerce_beauty_item_none">None</string>
    <string name="commerce_beauty_item_beauty_smooth">Smooth</string>
    <string name="commerce_music_effect_title">Music Effects</string>
    <string name="commerce_music_effect_background">Background Music</string>
    <string name="commerce_music_effect_voice">Vocal Enhancement</string>
    <string name="commerce_music_effect_mixing">Reverb</string>
    <string name="commerce_music_effect_back_music_joy">Joy</string>
    <string name="commerce_music_effect_back_music_romantic">Romantic</string>
    <string name="commerce_music_effect_back_music_joy2">Joy2</string>
    <string name="commerce_music_effect_beauty_voice_original">Original</string>
    <string name="commerce_music_effect_beauty_voice_sweet">Sweet</string>
    <string name="commerce_music_effect_mixing_ktv">KTV</string>
    <string name="commerce_music_effect_mixing_concert">Concert</string>
    <string name="commerce_live_prepare_title">E-Commerce</string>
    <string name="commerce_live_prepare_rotate">Flip</string>
    <string name="commerce_setting_advance_encoder">Encoder</string>
    <string name="commerce_live_prepare_hd">Video Quality</string>
    <string name="commerce_live_prepare_tip"> NOTE: For demo purposes only. Please limit live streams to 10 minutes or less.</string>
    <string name="commerce_live_prepare_start_live">Go Live</string>
    <string name="commerce_live_prepare_room_empty">Room name cannot be empty!</string>
    <string name="commerce_live_prepare_room_clipboard_copyed">Room ID has been copied to the clipboard!</string>
    <string name="commerce_live_prepare_room_name_hint">Please enter the room name</string>
    <string name="commerce_statistic_bitrate">Bitrate: %s kbps</string>
    <string name="commerce_statistic_up_bitrate">Send Bitrate: %s kbps</string>
    <string name="commerce_statistic_down_bitrate">Receive Bitrate: %s kbps</string>
    <string name="commerce_statistic_fps">FPS: %s fps</string>
    <string name="commerce_statistic_delay">Latency: %s ms</string>
    <string name="commerce_statistic_encoder">Encoder: %s</string>
    <string name="commerce_statistic_loss_package">Packet Loss: %s ％</string>
    <string name="commerce_statistic_up_net_speech">Uplink Speed: %s KB/s</string>
    <string name="commerce_statistic_down_net_speech">Downlink Speed: %s KB/s</string>
    <string name="commerce_statistic_resolution">Resolution: %s</string>
    <string name="commerce_statistic_up">Sender</string>
    <string name="commerce_statistic_encode_resolution">Encode Resolution: %s</string>
    <string name="commerce_statistic_encode_fps">Encode FPS: %s fps</string>
    <string name="commerce_statistic_up_loss_package">Uplink Packet Loss: %s ％</string>
    <string name="commerce_statistic_down">Receiver</string>
    <string name="commerce_statistic_receive_resolution">Received Resolution: %s</string>
    <string name="commerce_statistic_receive_fps">Received FPS: %s fps</string>
    <string name="commerce_statistic_down_loss_package">Downlink Packet Loss: %s ％</string>
    <string name="commerce_statistic_else">Others</string>
    <string name="commerce_statistic_quick_start_time">First Frame: %s ms</string>
    <string name="commerce_device_grade">Device Level: %s</string>
    <string name="commerce_statistic_sr">Super Clarity: %s</string>
    <string name="commerce_statistic_pvc">PVC: %s</string>
    <string name="commerce_statistic_low_stream">Low-quality Video Stream: %s</string>
    <string name="commerce_statistic_svc">SVC: %s</string>
    <string name="commerce_statistic_h265">H265: %s</string>
    <string name="commerce_shop_auction_item">Diamond Ring</string>
    <string name="commerce_shop_auction_item_0">Ear Ring</string>
    <string name="commerce_shop_auction_item_1">Necklace</string>
    <string name="commerce_shop_auction_item_2">Emerald Ring</string>
    <string name="commerce_shop_auction_start_from">Start from</string>
    <string name="commerce_shop_auction_current_bid">Current Bid:</string>
    <string name="commerce_shop_auction_start">Start</string>
    <string name="commerce_shop_auction_buy">Buy</string>
    <string name="commerce_shop_auction_not_start">Auction Not Started</string>
    <string name="commerce_shop_auction_leading_bidder">You are the leading bidder.</string>
    <string name="commerce_shop_auction_you_leading">You</string>
    <string name="commerce_shop_auction_bid">Bid: $%s</string>
    <string name="commerce_shop_auction_price">$%s</string>
    <string name="commerce_shop_auction_won">won</string>
    <string name="commerce_shop_item_qty">Qty: %s</string>
    <string name="commerce_shop_item_sold_out">Sold Out</string>
    <string name="commerce_shop_alert_bought">Bought!</string>
    <string name="commerce_shop_alert_sold_out">Sold Out!</string>
    <string name="commerce_shop_alert_submit">OK</string>
    <string name="commerce_local_uid">Local UID：%s</string>
    <string name="commerce_shop_set">Set</string>
    <string name="commerce_linking_request_message">Application</string>
    <string name="commerce_online_audience">Online Audience</string>
    <string name="commerce_agree_onseat">Accept</string>
    <string name="commerce_application">Invite</string>
    <string name="commerce_application_waitting">Waiting</string>
    <string name="commerce_empty_onseat_apply">No Application Yet</string>
    <string name="commerce_apply_onseat">Apply Co-host</string>
    <string name="commerce_stop_linking">End</string>
    <string name="commerce_cancel_linking">Revoke</string>
    <string name="commerce_linking">Co-hosting</string>
    <string name="commerce_is_onseat">Co-host</string>
    <string name="commerce_reject_onseat">Declined</string>
    <string name="commerce_audience_settings">Audience Settings</string>
    <string name="commerce_can_apply">Available for co-host</string>
    <string name="commerce_interacting">Engaging</string>
    <string name="commerce_to_the_audience">To audience %s</string>
    <string name="commerce_content">We have detected that the current content violates our guidelines.</string>
    <string name="commerce_setting_preset">Preset</string>
    <string name="commerce_setting_advance_video_setting">Video Settings</string>
    <string name="commerce_setting_advance_audio_setting">Audio Settings</string>
    <string name="commerce_setting_advance_quality_enhance">Super Clarity</string>
    <string name="commerce_setting_advance_quality_h265">H265</string>
    <string name="commerce_setting_advance_ok">OK</string>
    <string name="commerce_setting_confirm">Save</string>
    <string name="commerce_setting_preset_title">Video Preset</string>
    <string name="commerce_setting_advance_quality_enhance_tip">After enabling the switch, a series of video enhancement strategies will be applied, including but not limited to super Clarity. The main goal is to improve the visual experience while maintaining the same bitrate.</string>
    <string name="commerce_setting_advance_quality_h265_tip">After enabling the switch, a series of video enhancement strategies will be applied, including but not limited to H.265. The main goal is to improve the visual experience while maintaining the same bitrate.</string>
    <string name="commerce_setting_advance_color_enhance">Color Enhancement</string>
    <string name="commerce_setting_advance_color_enhance_tip">fter enabling this switch, the video image\'s color saturation will be automatically adjusted to make the colors more vibrant and lifelike, enhancing the visual experience.</string>
    <string name="commerce_setting_advance_dark_enhance">Low-light Enhancement</string>
    <string name="commerce_setting_advance_dark_enhance_tip">After enabling this switch, the system will automatically process the video taken in low-light conditions. It will employ techniques such as intelligent fill light to enhance clarity and brightness, ultimately improving the video quality.</string>
    <string name="commerce_setting_advance_video_noise_reduce">Video Noise Reduction</string>
    <string name="commerce_setting_advance_video_noise_reduce_tip">After enabling this switch, it will automatically remove the noise from the video, making the video appear clearer.</string>
    <string name="commerce_setting_advance_bitrate_save">PVC</string>
    <string name="commerce_setting_advance_bitrate_save_tip">After enabling this switch, it will automatically achieve a reduction in bitrate while maintaining the same video quality.</string>
    <string name="commerce_setting_advance_resolution">Resolution</string>
    <string name="commerce_setting_advance_encode_resolution">Encode Resolution</string>
    <string name="commerce_setting_advance_encode_resolution_tip">After modifying the encoding resolution, please check the quality change effect on the audience end.</string>
    <string name="commerce_setting_advance_bitrate">Adaptive Bitrate</string>
    <string name="commerce_setting_advance_bitrate_tips">After enabling this switch, the algorithm will automatically match the appropriate bitrate based on the current resolution and frame rate.</string>
    <string name="commerce_setting_advance_ear_back">IEM</string>
    <string name="commerce_setting_advance_ear_back_tip">In-Ear Monitoring</string>
    <string name="commerce_setting_advance_vocal_volume">Vocal Volume</string>
    <string name="commerce_setting_advance_music_volume">Music Volume</string>
    <string name="commerce_bottom_list_cancel">Cancel</string>
    <string name="commerce_setting_advance_framerate">Frame Rate</string>
</resources>