<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="8dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivCommodity"
        android:layout_width="72dp"
        android:layout_height="72dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/commerce_auction_goods"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvItemName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        app:layout_constraintStart_toEndOf="@+id/ivCommodity"
        app:layout_constraintTop_toTopOf="@+id/ivCommodity"
        app:layout_constraintEnd_toEndOf="parent"
        android:ellipsize="end"
        android:lines="1"
        android:textStyle="bold"
        android:text="@string/commerce_shop_auction_item_0"
        android:textColor="#191919"
        android:textSize="16sp"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvBid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/tvItemName"
        app:layout_constraintTop_toBottomOf="@+id/tvItemName"
        android:lines="1"
        android:textColor="#191919"
        android:textSize="15sp"
        android:text="@string/commerce_shop_auction_start_from"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/tvItemName"
        app:layout_constraintBottom_toBottomOf="@+id/ivCommodity"
        android:lines="1"
        android:textStyle="bold"
        android:textColor="#5C1300"
        android:textSize="18sp"
        android:text="$1"
        />

    <Button
        android:id="@+id/btnStart"
        android:layout_width="96dp"
        android:layout_height="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/ivCommodity"
        android:background="@drawable/commerce_btn_gradient_orange"
        android:text="@string/commerce_shop_auction_buy"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="15sp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>