<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <io.agora.scene.widget.CommonTitleView
        android:id="@+id/title_view"
        style="@style/title_view"
        app:ctv_centerText="@string/commerce_app_name"
        tools:ignore="MissingConstraints" />


    <com.scwang.smart.refresh.layout.SmartRefreshLayout
        android:id="@+id/smart_refresh_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_view">

        <com.scwang.smart.refresh.header.ClassicsHeader
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvRooms"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="7.5dp"
            android:overScrollMode="never"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="2"
            android:clipToPadding="false"
            android:clipChildren="false"
            android:paddingBottom="50dp"
            tools:listitem="@layout/commerce_room_item"
            tools:visibility="visible"
            android:visibility="gone" />

        <com.scwang.smart.refresh.footer.ClassicsFooter
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.scwang.smart.refresh.layout.SmartRefreshLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnCreateRoom"
        style="@style/def_btn_full"
        android:layout_width="195dp"
        android:layout_height="wrap_content"
        android:drawableStart="@mipmap/icon_create_room"
        android:gravity="center"
        android:paddingHorizontal="50dp"
        android:text="@string/commerce_create_room"
        android:textColor="@color/white"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTips1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="47dp"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/commerce_create_tips1"
        android:textColor="@color/def_text_color_3c4"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivBgMobile" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivBgMobile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintVertical_bias="0.3"
        android:src="@mipmap/bg_mobile_pre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnCreateRoom2"
        android:layout_width="195dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@drawable/bg_def_button_solid"
        android:drawableStart="@mipmap/icon_create_room"
        android:gravity="center"
        android:paddingHorizontal="50dp"
        android:text="@string/commerce_create_room"
        android:textColor="@color/white"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivBgMobile" />

</androidx.constraintlayout.widget.ConstraintLayout>