<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="8dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/ivCommodity"
        android:layout_width="72dp"
        android:layout_height="72dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:cardCornerRadius="6dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/commerce_shop_auction_item"
            />
    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvItemName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        app:layout_constraintStart_toEndOf="@+id/ivCommodity"
        app:layout_constraintTop_toTopOf="@+id/ivCommodity"
        app:layout_constraintEnd_toEndOf="parent"
        android:ellipsize="end"
        android:lines="1"
        android:textStyle="bold"
        android:text="@string/commerce_shop_auction_item_0"
        android:textColor="@color/white"
        android:textSize="16sp"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvBid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/tvItemName"
        app:layout_constraintTop_toBottomOf="@+id/tvItemName"
        android:lines="1"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:text="@string/commerce_shop_auction_start_from"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/tvItemName"
        app:layout_constraintBottom_toBottomOf="@+id/ivCommodity"
        android:lines="1"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:text="$1"
        />
    
    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/ivBuyerAvatar"
        android:layout_width="14dp"
        android:layout_height="14dp"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@+id/tvPrice"
        app:layout_constraintTop_toTopOf="@+id/tvPrice"
        app:layout_constraintBottom_toBottomOf="@+id/tvPrice"
        app:shapeAppearanceOverlay="@style/commerce_roundStyle_50"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvBuyerName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        app:layout_constraintStart_toEndOf="@+id/ivBuyerAvatar"
        app:layout_constraintTop_toTopOf="@+id/tvPrice"
        app:layout_constraintBottom_toBottomOf="@+id/tvPrice"
        android:lines="1"
        android:textStyle="bold"
        android:textColor="#BBBEBF"
        android:textSize="15sp"
        android:text="a**"
        />
    
    <Button
        android:id="@+id/btnStart"
        android:layout_width="96dp"
        android:layout_height="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/ivCommodity"
        android:background="@drawable/commerce_corner_radius_gradient_orange"
        android:text="@string/commerce_shop_auction_start"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="15sp"
        />
    
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvCountDown"
        android:layout_width="96dp"
        android:layout_height="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/ivCommodity"
        android:background="@drawable/commerce_rect_40000000_black"
        android:gravity="center"
        android:textColor="#FF5252"
        android:textStyle="bold"
        android:textSize="15sp"
        android:text="00:26"
        android:visibility="invisible"
        />

    <Button
        android:id="@+id/btnBid"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivCommodity"
        android:background="@drawable/commerce_corner_radius_gradient_orange"
        android:text="@string/commerce_shop_auction_start"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="15sp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>